--- a/.github/workflows/GCP_CI_CD.yml
+++ b/.github/workflows/GCP_CI_CD.yml
@@ -31,8 +31,7 @@ name: 'Build and Deploy to Cloud Run'
 
 on:
   push:
-    branches:
-      ["master"]
+    branches: ["main"]
 
 env:
   PROJECT_ID: pro-rigging-439917-u3 # TODO: update to your Google Cloud project ID
